Fix issue with double scrolling

--- a/src/containers/controllers/App.scss
+++ b/src/containers/controllers/App.scss
@@ -7,8 +7,7 @@
     font-size: 100%;
 }
 
-body,
-html {
+body {
     font-family: $fontStack;
     background-color: $bg;
     color: $fg;
